--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -41,8 +41,14 @@ h1, h2, h3, h4, h5, p {
 
 /* Brevo form */
 #sib-form-group {
+	display: grid;
+	grid-template-areas: "form";
 	position: relative;
 	padding: 0;
+}
+
+#sib-form-container {
+	grid-area: form;
 }
 
 #sib-container {
@@ -58,12 +64,8 @@ h1, h2, h3, h4, h5, p {
 	margin-bottom: 0;
 }
 
-#overlay {
-	position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+#underlay {
+	grid-area: form;
 	background-color: rgba(255, 255, 255, 0.8);
 	backdrop-filter: blur(4px); /* Apply blur to the backdrop */
   -webkit-backdrop-filter: blur(10px); /* Safari support */
@@ -90,7 +92,6 @@ h1, h2, h3, h4, h5, p {
 #image-caption a {
 	color: #d6d6d6;
 }
-
 
 #main-footer {
 	padding: 5rem;
