--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -48,7 +48,7 @@ h1, h2, h3, h4, h5, p {
 	padding: 0;
 }
 
-#sib-form-group .entry__error.entry__error--primary {
+#sib-form-group .entry__error--primary {
 	font-size:16px; 
 	text-align:left; 
 	font-family:sans-serif; 
